# noo

01_labs_random_search/: CMakeLists.txt  main.cpp
04_mpi_barrier/: main.cpp
06_mpi_scatter/: CMakeLists.txt  main.cpp
07_mpi_gather/: CMakeLists.txt  main.cpp
N01_labs_neighborhood_search/: main.cpp
N01_labs_neighborhood_search/cpp/: CMakeLists.txt
N01_labs_neighborhood_search/python/: Pipfile
N02_labs_depth_first/: main.cpp
naloge/labs_depth_first/: CMakeLists.txt
naloge/labs_neighborhood_search/cpp/: main.cpp
naloge/labs_neighborhood_search/python/: main.py
naloge/labs_random_search/: CMakeLists.txt  main_niti_lambda.cpp  main_niti_objekt.cpp
naloge/labs_steepest_descent/: CMakeLists.txt  main.cpp
naloge/labs_threads/cpp/: main.cpp
naloge/labs_threads/python/: main_e_v1.py  main_e_v2.py  main_e_v3.py
naloge/mpi_barrier/: CMakeLists.txt
naloge/mpi_bcast/: CMakeLists.txt  main.cpp
naloge/mpi_isend_recv/: CMakeLists.txt  main.cpp
naloge/mpi_reduce/: CMakeLists.txt  main.cpp
naloge/mpi_send_recv/: CMakeLists.txt  main.cpp
